# VR

./: CMakeLists.txt  package.xml
include/: hmdHandler.h  hmdHandler.h.orig  hmdHandler0513backup.h  hmdHandler_noHMD.h  hmdHandler_reduce.h  hmdHandler_sphere.h  overlay.h  render.h  ricohStream.h  rvizOverlay.h  tracker.h
include/glad/: glad.h
src/: glad.c  hmdHandler.cpp  hmdHandler.cpp.cpu  hmdHandler.cpp.gpu_editing  hmdHandler.cpp.orig  hmdHandler.cppx  hmdHandler_0513backup.cpp  hmdHandler_camera.cpp  hmdHandler_gpu_editing.cpp  hmdHandler_gpu_editing2.cpp  hmdHandler_noHMD.cpp  hmdHandler_reduce.cpp  hmdHandler_sphere.cpp  main.cpp  main_noHMD.cpp  main_overlay.cpp  main_rviz.cpp  main_rviz2.cpp  main_tracker.cpp  overlay.cpp  overlay2.cpp  qtoverlaycontroller.cpp  qtoverlaycontroller.h  render.cpp  ricohStream.cpp  rvizOverlay.cpp  rvizOverlay.cpp.old  rvizOverlay00.cpp  rvizOverlayc.cpp  tracker.cpp  usbcamera.cpp  widget.ui  widget2.ui
src/helloworld/: Microsoft.CognitiveServices.Speech.core.lib  helloworld.cpp
